apps/base/redlib/redlib-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libreddit-ingress
  namespace: default
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/issuer: nohost-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: defined-hosts-only
    external-dns.alpha.kubernetes.io/target: nohost.network
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  rules:
    - host: libreddit.nohost.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redlib-svc
                port:
                  name: redlib
  tls:
    - hosts:
        - libreddit.nohost.network
      secretName: libreddit-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redlib-ingress
  namespace: default
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/issuer: nohost-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: defined-hosts-only
    external-dns.alpha.kubernetes.io/target: nohost.network
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  rules:
    - host: redlib.nohost.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redlib-svc
                port:
                  name: redlib
  tls:
    - hosts:
        - redlib.nohost.network
      secretName: redlib-cert
